<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item_home"
        android:title="@string/home"
        android:icon="@drawable/ic_bottom_bar_home"/>

    <item android:id="@+id/item_system"
        android:title="@string/system"
        android:icon="@drawable/ic_bottom_bar_navi"/>

    <item android:id="@+id/item_wx_public_number"
        android:title="@string/wx_public_number"
        android:icon="@drawable/ic_bottom_bar_wechat"
        app:showAsAction="always"/>

    <item android:id="@+id/item_project"
        android:title="@string/project"
        android:icon="@drawable/ic_bottom_bar_project"/>

    <item android:id="@+id/item_me"
        android:title="@string/me"
        android:icon="@drawable/ic_bottom_bar_mine"/>
</menu>