<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="2">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_me_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/tv_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="22sp"
            android:textColor="@color/text_on_main"/>
        <TextView
            android:id="@+id/tv_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/text_on_main"
            android:layout_marginBottom="3dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_user_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/text_on_main" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_toEndOf="@+id/tv_user_level"
                android:layout_marginStart="10dp"
                android:textColor="@color/text_on_main" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_coin"
                app:tint="@color/colorPrimary"
                android:contentDescription="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_integral"
                android:textSize="15sp"
                android:layout_marginStart="70dp"
                android:textColor="@color/text_surface"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@null"
                android:rotation="180"
                android:src="@drawable/ic_back"
                app:tint="@color/colorPrimary"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_article"
                app:tint="@color/colorPrimary"
                android:contentDescription="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_share"
                android:textColor="@color/text_surface"
                android:textSize="15sp"
                android:layout_marginStart="70dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:rotation="180"
                app:tint="@color/colorPrimary"
                android:contentDescription="@null"
                android:layout_gravity="end"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_collect"
                app:tint="@color/colorPrimary"
                android:contentDescription="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_collect"
                android:textSize="15sp"
                android:textColor="@color/text_surface"
                android:layout_marginStart="70dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:rotation="180"
                android:contentDescription="@null"
                android:layout_gravity="end"
                app:tint="@color/colorPrimary" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_read_later"
                app:tint="@color/colorPrimary"
                android:scaleType="centerInside"
                android:contentDescription="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_later"
                android:textColor="@color/text_surface"
                android:layout_marginStart="70dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:rotation="180"
                app:tint="@color/colorPrimary"
                android:contentDescription="@null"
                android:layout_gravity="end"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:src="@drawable/ic_github"
                app:tint="@color/colorPrimary" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_project"
                android:textColor="@color/text_surface"
                android:layout_marginStart="70dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:rotation="180"
                app:tint="@color/colorPrimary"
                android:contentDescription="@null"
                android:layout_gravity="end"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_about"
                app:tint="@color/colorPrimary"
                android:contentDescription="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_developer"
                android:textColor="@color/text_surface"
                android:layout_marginStart="70dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:rotation="180"
                app:tint="@color/colorPrimary"
                android:contentDescription="@null"
                android:layout_gravity="end"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/fl_setting"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setting"
                app:tint="@color/colorPrimary"
                android:contentDescription="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textColor="@color/text_surface"
                android:layout_marginStart="70dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:rotation="180"
                app:tint="@color/colorPrimary"
                android:contentDescription="@null"
                android:layout_gravity="end"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>